Safari layout bugfix.

--- a/styles/components/notifications.sass
+++ b/styles/components/notifications.sass
@@ -23,6 +23,7 @@
             margin-bottom: 20px
             position: relative
             overflow: hidden
+            transform: translate3d(0, 0, 0)
             .holder
                 overflow-y: auto
                 max-height: 150px
